# reverseaffinity-video

./: AGENTS.md  README.md  getstarted.ps1  main.py  requirements.txt
cpp_editor/: CMakeLists.txt  build.sh  build_windows.ps1  install_deps.sh
cpp_editor/include/: canvas.h  filters.h  gl_canvas.h  history.h  layers.h  panels.h
cpp_editor/src/: canvas.cpp  gpu_ops.h  gpu_pipeline.h  history.cpp  layers.cpp  panels.cpp  simd_ops.cpp  tools.cpp
cpp_editor/test/: benchmark.cpp
docs/: blend_modes.md  project_architecture.md  shortcuts.md  user_guide.md
editor/: _colorspace.py  batch.py  brushengine.py  canvas.py  crop_tool.py  file_io.py  filters.py  gpu_accel.py  gradient_editor.py  guides.py  i18n.py  layers.py  lut.py  panels.py  path.py  preferences_dialog.py  resources.py  scopes.py  settings.py  timeline_widget.py  tool_icons.py  video_engine.py  video_ffmpeg.py  video_mode.py
editor/file_formats/: __init__.py  psd_import.py
plugins/: __init__.py  example_invert_plugin.py  example_tool_plugin.py
reverseaffinity/: __init__.py  i18n.py
reverseaffinity/shared/: __init__.py
reverseaffinity/video/: video_app.py
src/cpp_backend/: CMakeLists.txt  build.sh
src/cpp_backend/include/: app_ui.h  simd_ops.h  tools.h
src/cpp_backend/src/: app_ui.cpp  filters.cpp  gl_canvas.cpp  main.cpp  simd_ops.cpp
src/cpp_backend/test/: CMakeLists.txt
src/python_ui/: main.py
src/python_ui/editor/: app_ui.py  audio_mixer.py  blend_modes.py  blur_sharpen.py  canvas.py  chroma_key.py  color_grading.py  effect_stack.py  export_dialog.py  file_dialog.py  gradient.py  history.py  path.py  preferences_dialog.py  snapping.py  splash.py  timeline_widget.py  tools.py  transport_bar.py  video_engine.py  video_glplayer.py
src/python_ui/editor/file_formats/: psd_export.py
src/python_ui/locale/: de_DE.json  en_US.json  es_ES.json  fr_FR.json  it_IT.json  ja_JP.json  pt_BR.json
src/python_ui/reverseaffinity/shared/: resources.py
src/python_ui/reverseaffinity/video/: __init__.py  video_app.py
src/python_ui/tests/: conftest.py  run_all.py  test_canvas.py  test_data.py  test_filters.py  test_new_features.py  test_tools.py
tests/: run_coverage.sh  test_gui.py  test_history.py  test_integration.py  test_layers.py  test_performance.py  test_regressions.py  test_stress.py
